[gd_scene load_steps=57 format=3 uid="uid://cemn5xknrhbc1"]

[ext_resource type="Texture2D" uid="uid://dyan4p8o0ijld" path="res://player/player.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://ceylb24hpkec" path="res://player/player.gd" id="1_rkbax"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rkbax"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1dw6"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("1_oul6g")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("1_oul6g")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("1_oul6g")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("1_oul6g")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("1_oul6g")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hag"]
atlas = ExtResource("1_oul6g")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqiix"]
atlas = ExtResource("1_oul6g")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7oew"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c35mf"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_65viv"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7c3f"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjvpn"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7qer"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4c7l"]
atlas = ExtResource("1_oul6g")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_knn7v"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pqkx"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw77l"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rptt4"]
atlas = ExtResource("1_oul6g")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7pn3"]
atlas = ExtResource("1_oul6g")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8hi5"]
atlas = ExtResource("1_oul6g")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uvqg"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s1yo"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ejfk"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd2rm"]
atlas = ExtResource("1_oul6g")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q28gw"]
atlas = ExtResource("1_oul6g")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge24q"]
atlas = ExtResource("1_oul6g")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnw6m"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1so5t"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_55jnj"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx5ib"]
atlas = ExtResource("1_oul6g")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2xo5"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_art4l"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjxoa"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gswnw"]
atlas = ExtResource("1_oul6g")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcnuv"]
atlas = ExtResource("1_oul6g")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j55il"]
atlas = ExtResource("1_oul6g")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjies"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmwog"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pxes"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmu53"]
atlas = ExtResource("1_oul6g")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7j2h"]
atlas = ExtResource("1_oul6g")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0b8q"]
atlas = ExtResource("1_oul6g")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_jfgyi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkbax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqiix")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7oew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c35mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65viv")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7c3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjvpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7qer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4c7l")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_knn7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pqkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw77l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rptt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7pn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8hi5")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uvqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s1yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ejfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd2rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q28gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge24q")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnw6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1so5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55jnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx5ib")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2xo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_art4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjxoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gswnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcnuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j55il")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjies")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmwog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pxes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmu53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7j2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0b8q")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rkbax"]
radius = 4.47214

[sub_resource type="CircleShape2D" id="CircleShape2D_g1dw6"]
radius = 14.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_rkbax")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -10)
sprite_frames = SubResource("SpriteFrames_jfgyi")
animation = &"front_walk"
frame_progress = 0.700333
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_rkbax")
metadata/_edit_group_ = true

[node name="PlayerHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_g1dw6")

[node name="AttackCoolDown" type="Timer" parent="."]
wait_time = 0.5

[node name="DealAttackTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="WorldCamera" type="Camera2D" parent="."]
scale = Vector2(112.69, -25.2164)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 576
limit_bottom = 272
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="CliffsideCamera" type="Camera2D" parent="."]
scale = Vector2(112.69, -25.2164)
zoom = Vector2(4, 4)

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(0.27451, 0.756863, 0.301961, 1)
offset_left = -7.0
offset_top = 10.0
offset_right = 133.0
offset_bottom = 30.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="ReginTime" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="PlayerHitBox" to="." method="_on_player_hit_box_body_entered"]
[connection signal="body_exited" from="PlayerHitBox" to="." method="_on_player_hit_box_body_exited"]
[connection signal="timeout" from="AttackCoolDown" to="." method="_on_attack_cool_down_timeout"]
[connection signal="timeout" from="DealAttackTimer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="ReginTime" to="." method="_on_regin_time_timeout"]
